# Qt-cpp-spotify-music-player

./: CMakeLists.txt  Main.qml  README.md  main.cpp
